알고리즘 문제 풀이(22.03.08)
- 프로그래머스 알고리즘 문제 풀이

--- a/cppAlgorithm/cppAlgorithm.vcxproj
+++ b/cppAlgorithm/cppAlgorithm.vcxproj
@@ -246,6 +246,7 @@
     <ClCompile Include="Q77884.cpp" />
     <ClCompile Include="Q81301.cpp" />
     <ClCompile Include="Q82612.cpp" />
+    <ClCompile Include="Q86051.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
