--- a/cppAlgorithm/cppAlgorithm.vcxproj
+++ b/cppAlgorithm/cppAlgorithm.vcxproj
@@ -247,6 +247,7 @@
     <ClCompile Include="Q81301.cpp" />
     <ClCompile Include="Q82612.cpp" />
     <ClCompile Include="Q86051.cpp" />
+    <ClCompile Include="Q86491.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
